tests/paczka2/big_fuzzy/63907610.err
Error in line 2: dPm S672 80,9
Error in line 5: eL8puIqnX S146 12,9
Error in line 21: eL8puIqnX S556 73,4
Error in line 22: eL8puIqnX A116 85,8
Error in line 24: eL8puIqnX S146 19,1
Error in line 45: dPm A116 720,4
Error in line 49: dPm S672 30,1
Error in line 56: xUok S672 58,3
Error in line 58: S672 S556 84,83
Error in line 46: Og8moiPo S146 122,5
Error in line 60: 5nVHtoTSI2S S556 92,9
Error in line 54: S672 S556 59,4
Error in line 84: eL8puIqnX S556 92,48
Error in line 64: Og8moiPo A116 80,8
Error in line 106: eL8puIqnX S556 7,8
Error in line 110: dPm S146 259,7
Error in line 109: xUok S672 36,4
Error in line 127: Og8moiPo S556 2,7
Error in line 121: S672 S556 97,7
Error in line 136: dPm S146 69,2
Error in line 140: qpVFPw S672 46,5
Error in line 143: qpVFPw A116 79,5
Error in line 159: S672 S146 -3,3
Error in line 158: S672 S146 54,6
Error in line 174: S672 S146 74,5
Error in line 187: S672 S672 54,3
Error in line 181: xUok S146 28,4
Error in line 214: xUok S672 94,5
Error in line 216: xUok S146 62,0
Error in line 213: Og8moiPo S672 40,0
Error in line 217: qpVFPw A116 4,6
Error in line 226: dPm S146 175,31
Error in line 224: qpVFPw S556 58,9
Error in line 238: xUok S146 79,1
Error in line 222: dPm S146 41,0
Error in line 241: eL8puIqnX A116 94,6
Error in line 247: dPm S672 46,6
